common/resources/css/common.css
html {
    background: #FFFFFF url('../images/background.png') repeat-x top;
    font-family: Verdana, sans-serif; 
    font-size: 12px;
    height: 100%;
    margin: 0;
    padding: 0;
}
body {
    height: 100%;
    margin: 0;
    padding: 0;
    text-align: center;
}
a {
    color: #3B6E9C;
    text-decoration: none;
}
a:hover {
    text-decoration: underline;
}

#bodyContainer {
    margin: 0 auto;
    min-height: 100%;
    position: relative;
    text-align: left;
    width: 975px;
}
#contentBody {
    margin-top: 25px;
    padding-bottom: 35px;
}
#contentFooter {
    background: url('../images/roundRectangle.png') no-repeat top;
    bottom: 0;
    color: #616161;
    line-height: 35px;
    position: absolute;
    text-align: center;
    width: 100%;
}
#contentHeader {
    background: url('../images/roundRectangle.png') no-repeat bottom;
    color: #616161;
    padding: 7px;
}
#contentHeader img.logo {
    float: left;
}
#contentHeader .userInfo {
    float: right;
}

.clear {
    clear: both;
}
.hidden {
    display: none;
}

